<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@color/colorBlues"
        android:layout_height="match_parent"
        android:id="@+id/llStoreView"
        tools:context=".activity.MainActivity">

        <ImageView
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:id="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:src="@drawable/carservice"
            />


        <ProgressBar
            android:layout_width="wrap_content"
            android:id="@+id/progress_bar"
            android:visibility="gone"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/welcomeText"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            android:padding="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="22sp"
            android:layout_marginStart="4dp"
            android:textColor="@color/white"
            android:text="@string/welcome_back"
            />

          <TextView
              app:layout_constraintTop_toBottomOf="@+id/welcomeText"
              android:textSize="14sp"
              app:layout_constraintStart_toStartOf="parent"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/manage_your_car_service"
              android:textColor="@color/white"
              android:layout_marginTop="10dp"
              android:id="@+id/slogans"
              android:layout_marginStart="30dp"
              android:padding="4dp"
              />


        <TextView
            app:layout_constraintTop_toBottomOf="@+id/slogans"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="wrap_content"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:text="@string/manage_your_car_service_slogans"
            android:textColor="@color/white"
            android:layout_marginTop="1dp"
            android:layout_marginStart="30dp"
            android:padding="4dp"
            />



       <LinearLayout
           android:orientation="vertical"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintBottom_toBottomOf="parent"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">

           <Button
               android:layout_width="match_parent"
               android:backgroundTint="@color/white"
               android:layout_height="wrap_content"
               android:text="@string/sign_in"
               android:textColor="@color/colorBlues"
               android:layout_marginStart="50dp"
               android:id="@+id/signInbtn"
               android:layout_marginEnd="50dp"
               />


          <RelativeLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              >
              <View
                  android:layout_width="match_parent"
                  android:layout_height="1dp"
                  android:layout_marginStart="20dp"
                  android:layout_marginEnd="20dp"
                  android:layout_centerInParent="true"
                  android:background="@color/white"
                  />

              <TextView
                  android:layout_width="wrap_content"
                  android:layout_centerInParent="true"
                  android:textSize="18sp"
                  android:textColor="@color/purple_700"
                  android:layout_height="wrap_content"
                  android:text="@string/orText"
                  />


          </RelativeLayout>

           <com.google.android.material.button.MaterialButton
               android:layout_width="match_parent"
               android:backgroundTint="@color/white"
               android:layout_height="wrap_content"
               android:text="@string/createAccount"
               android:textColor="@color/colorBlues"
               android:layout_marginStart="50dp"
               android:id="@+id/registerAccount"
               android:layout_marginEnd="50dp"
               android:layout_marginBottom="20dp"
               />

       </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>