<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBlues">

        <ImageView
            android:id="@+id/backIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:src="@drawable/ic_baseline_arrow_back_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/white" />


        <TextView
            android:id="@+id/signIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:padding="5dp"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/backIcon" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/top_rounded_circle"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signIn">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:text="@string/welocome"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="4dp"
                android:alpha="0.5"
                android:text="@string/hello_there_register_to_continue" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:alpha="0.5"
                android:text="@string/fnameandlastName" />

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_marginStart="30dp"
               android:layout_marginTop="10dp"
               android:layout_marginEnd="30dp"
               android:layout_height="wrap_content">


                   <EditText
                       android:background="@drawable/rounded_circle"
                       android:id="@+id/edtFname"
                       android:layout_width="140dp"
                       android:layout_height="50dp"
                       android:textColor="@color/black" />



                   <EditText
                       android:background="@drawable/rounded_circle"
                       android:layout_width="150dp"
                       android:layout_marginStart="10dp"
                       android:id="@+id/editTextPhoneemail"
                       android:layout_height="50dp"
                       android:textColor="@color/black" />

           </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:alpha="0.5"
                android:text="@string/phonenumber_or_email" />


                <EditText
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/rounded_circle"
                    android:layout_marginEnd="30dp"
                    android:id="@+id/edttxtPhone"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:textColor="@color/black" />




            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:alpha="0.5"
                android:text="@string/password" />


                <EditText
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="30dp"
                    android:id="@+id/edtTxtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/rounded_circle"
                    android:textColor="@color/black" />



            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:id="@+id/userCheckBox"
                android:layout_marginStart="30dp"
                android:text="@string/is_you_shop_owner"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:id="@+id/registerBtm"
                android:backgroundTint="@color/colorBlues"
                android:text="@string/register"
                android:layout_marginTop="40dp"
                android:textColor="@color/white"
                />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>