<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:id="@+id/design_bottom_sheet"
        android:layout_height="match_parent"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorBlues">

            <ImageView
                android:id="@+id/backIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:src="@drawable/ic_baseline_arrow_back_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/white" />


            <TextView
                android:id="@+id/signIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:padding="5dp"
                android:text="@string/signin"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/backIcon" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/top_rounded_circle"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signIn">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/welcome_back"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="4dp"
                    android:alpha="0.5"
                    android:text="Hello there sign In Continue" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="30dp"
                    android:alpha="0.5"
                    android:text="@string/phonenumber_or_email" />


                    <EditText
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="30dp"
                        android:background="@drawable/rounded_circle"
                        android:id="@+id/editTextPhoneemail"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:textColor="@color/black" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="30dp"
                    android:alpha="0.5"
                    android:text="@string/password" />


                    <EditText
                        android:id="@+id/edtTxtPassword"
                        android:layout_width="match_parent"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/rounded_circle"
                        android:layout_marginEnd="30dp"
                        android:layout_height="50dp"
                        android:textColor="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlues"
                    android:textStyle="bold"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="30dp"
                    android:text="@string/forgot_password"
                    />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:id="@+id/signInbtn"
                    android:backgroundTint="@color/colorBlues"
                    android:text="@string/sign_in"
                    android:layout_marginTop="40dp"
                    android:textColor="@color/white"
                    />




            </LinearLayout>



        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>